<resources>
    <string name="app_name">MyApp</string>

    <string name="forExchange">Переход к обмену данными</string>
    <string name="forFlags">Переход к странам</string>
    <string name="forFiles">Переход к работе с файлами</string>
    <string name="forSD">Переход к работе с SD-картой</string>

    <string name="aboutActivity">
        Привет! Меня зовут Рената, я разработала это приложение для дисциплины "Разработка интернет приложений.</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="backButton">В начало</string>
    <string name="aboutThirdActivity">Очень приятно</string>
    <string name="tapButton">*тык*</string>
    <string name="wrongButton">Не работает, не тыкать</string>
    <string name="thirdButton">Завершить</string>
    <string name="meet">Давайте познакомимся?</string>
    <string name="name">Как Вас зовут?</string>
    <string name="age">Сколько Вам лет?</string>
    <string name="city">Откуда Вы?</string>
    <string name="nextPage">Хорошо, вперед -></string>
    <string name="aboutName">Ваше имя</string>
    <string name="aboutAge">Ваш возраст</string>
    <string name="aboutCity">Ваш город</string>
    <string name="aboutCountries">Минутка полезной информации</string>
    <string name="arrow">-></string>
    <string name="aboutFiles">Работа с файлами</string>
    <string name="inputText">Введите текст</string>
    <string name="outputText">Получите текст</string>
    <string name="saveButton">Сохранить</string>
    <string name="openButton">Открыть</string>
    <string name="aboutSD">Работа с SD картой</string>

    <string name="letsCheck">Проверка состояния памяти</string>
    <string name="check">Проверить</string>
    <string name="freeSpace">Доступно памяти:</string>
    <string name="space">...</string>

    <string name="dataItem">Обмен данными</string>
    <string name="itemFiles">Работа с файлами</string>
    <string name="itemInner">Внутренняя память</string>
    <string name="itemOut">Внешняя память</string>
    <string name="itemFlags">Флаги</string>

    <string name="itemDB">Работа с базой данных</string>
    <string name="databaseName">База данных пользователей</string>
    <string name="addItem">Добавить</string>
    <string name="nameDB">Имя</string>
    <string name="ageDB">Возраст</string>
    <string name="cityDB">Город</string>
    <string name="addActivity">Изменения</string>
    <string name="accept">Подтвердить</string>
    <string name="deleteButton">Удалить</string>
    <string name="back">Назад</string>
    <string name="bytes">бит</string>

    <string name="myName">Рената</string>
    <string name="myCity">Казань</string>
    <string name="myAge">20</string>

</resources>