<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/nextPage"
        android:textColor="@color/grassGreen"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/meet"
        android:textColor="@color/darkGreen"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="356dp"
        android:layout_height="92dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="30"
            android:fontFamily="@font/comfortaa"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textColor="@color/grassGreen"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="60"
            android:ems="10"
            android:fontFamily="@font/comfortaa"
            android:gravity="start|top"
            android:hint="@string/aboutName"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="356dp"
        android:layout_height="92dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="30"
            android:fontFamily="@font/comfortaa"
            android:text="@string/city"
            android:textColor="@color/grassGreen"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="60"
            android:ems="10"
            android:fontFamily="@font/comfortaa"
            android:gravity="start|top"
            android:hint="@string/aboutCity"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="356dp"
        android:layout_height="92dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="30"
            android:fontFamily="@font/comfortaa"
            android:text="@string/age"
            android:textColor="@color/grassGreen"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="60"
            android:ems="10"
            android:fontFamily="@font/comfortaa"
            android:gravity="start|top"
            android:hint="@string/aboutAge"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="108dp"
        android:layout_height="51dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="goTo3"
        android:text="@string/tapButton"
        app:cornerRadius="0dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>