<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/welcome"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="377dp"
        android:layout_height="118dp"
        android:layout_marginTop="356dp"
        android:fontFamily="@font/comfortaa"
        android:lineSpacingExtra="5sp"
        android:text="@string/aboutActivity"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/grassGreen"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/myphoto" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="110dp"
        android:layout_height="165dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="108dp"
            android:layout_height="51dp"
            android:fontFamily="@font/comfortaa"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="goToExcange"
            android:text="@string/tapButton"
            app:cornerRadius="0dp"
            app:iconPadding="0dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="108dp"
            android:layout_height="51dp"
            android:fontFamily="@font/comfortaa"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="goToFlags"
            android:text="@string/tapButton"
            app:cornerRadius="0dp"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="108dp"
            android:layout_height="51dp"
            android:fontFamily="@font/comfortaa"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="goToFiles"
            android:text="@string/tapButton"
            app:cornerRadius="0dp"
            app:iconPadding="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="165dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.2" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:fontFamily="@font/comfortaa"
            android:text="@string/forExchange"
            android:textColor="@color/grassGreen" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:fontFamily="@font/comfortaa"
            android:text="@string/forFlags"
            android:textColor="@color/grassGreen" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:fontFamily="@font/comfortaa"
            android:text="@string/forFiles"
            android:textColor="@color/grassGreen" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>